# eureka

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  HANDOVER.md  LICENSE  README.md  SPEC-v3.md  UBIQUITOUS_LANGUAGE.md  pyproject.toml
docs/: secondbrainkit-learnings.md
docs/handoffs/: 2026-03-21_eureka-v3-build.md  2026-03-22_paper-reader-gemini-embeddings.md
eureka/: cli.py
eureka/commands/: discover.py  ingest.py  init.py  review.py  setup.py  status.py
eureka/core/: activity.py  ask.py  atom_ranker.py  citation_graph.py  db.py  decide.py  discovery.py  dump.py  embeddings.py  embeddings_gemini.py  extractor.py  index.py  lineage.py  linker.py  lint.py  lint_llm.py  llm.py  output.py  parser.py  profile.py  pushback.py  reflect.py  resolve.py  (+6 more)
plans/: PLAN-llm-wiki.md  PLAN-scientific-literature.md  PLAN-thought-partner.md  PLAN-v3.md  PLAN.md
tests/: test_activity.py  test_ask.py  test_ask_enhanced.py  test_ask_v3.py  test_cli_hardening.py  test_db_v3.py  test_decide.py  test_discover_cmd.py  test_discovery.py  test_dump.py  test_dump_profile.py  test_embeddings.py  test_extractor.py  test_fts.py  test_goal_gaps.py  test_historical_contradictions.py  test_index.py  test_ingest_source.py  test_init.py  test_linker.py  test_lint.py  test_lint_llm.py  test_paper_ingest.py  test_paper_reader.py  test_parser.py  test_patterns.py  test_profile.py  test_profile_scoring.py  test_pushback.py  test_readers.py  test_reflect.py  test_resolve.py  test_review.py  test_scorer.py  test_server.py  test_server_v3.py  test_slices_3_to_6.py  test_status.py  test_temporal.py
(+17 files in other folders)
