[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "eureka-brain"
version = "0.1.0"
description = "A CLI tool that turns your AI agent into a thought partner. Ingests books and papers, builds a knowledge graph, discovers ideas you didn't ask for."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "fastembed>=0.2.0",
    "pymupdf>=1.24.0",
]

[project.scripts]
eureka = "eureka.cli:main"

[tool.setuptools.packages.find]
include = ["eureka*"]

[tool.setuptools.package-data]
eureka = ["dashboard/*.html"]

[tool.pytest.ini_options]
testpaths = ["tests"]
